<resources>
    <string name="app_name">DesignBuildProject</string>
    <string name="epi_logger">EpiLogger</string>
    <string name="welcome">Velkommen</string>
    <string name="email">E-mail</string>
    <string name="password">Adgangskode</string>
    <string name="login">Log Ind</string>
    <string name="register">Opret bruger</string>
    <string name="register_new_user">Opret en ny bruger</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Adgangskode</string>
    <string name="confirm_password_hint">Bekræft adgangskode</string>
    <string name="register_button">Opret bruger</string>
    <string name="back_to_login">Tilbage til login</string>
    <string name="upload_header">Upload billeder til EpiLog</string>
    <string name="epiLogger_header">EpiLogger</string>
    <string name="history_title">EpiHistorik</string>
    <string name="history_subtitle">Hent personlig historik</string>
    <string name="start_date_label">Start Dato:</string>
    <string name="end_date_label">Slut Dato:</string>
    <string name="back_to_date_selection">Back to Date Selection</string>
    <string name="fetch_logs_button">Fetch Epihistorik</string>
    <string name="back_to_dashboard">Hovedmenu</string>
    <string name="title_activity_image_data">ImageData</string>
    <string name="title_activity_image_adapter">imageAdapter</string>
    <string name="title_activity_upload_adapter">UploadAdapter</string>


</resources>