<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/epiExplorerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epi_logger"
        android:textSize="66sp"
        android:textColor="#1e3e7e"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alfa_slab_one"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000"
        android:shadowRadius="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/registerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/epiExplorerHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/register_new_user"
            android:textColor="#1e3e7e"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_background"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_background"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/input_background"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/input_background"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="12dp"
            android:paddingBottom="5dp"
            android:text="@string/register_button"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/backToLogin"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="2dp"
            android:text="@string/back_to_login"
            android:textColor="#2b4a84"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
