<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <TextView
        android:id="@+id/epiExplorerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epiLogger_header"
        android:textSize="66sp"
        android:textColor="#1e3e7e"
        android:fontFamily="@font/alfa_slab_one"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000"
        android:shadowRadius="2"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/history_title"
        android:textColor="#1e3e7e"
        android:textSize="39sp"
        android:fontFamily="@font/alfa_slab_one"
        app:layout_constraintTop_toBottomOf="@id/epiExplorerHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/history_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_subtitle"
        android:textColor="#1e3e7e"
        android:textSize="26sp"
        android:fontFamily="@font/alfa_slab_one"
        app:layout_constraintTop_toBottomOf="@id/history_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/history_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fetchLogsButton">

        <!-- First view: date picker container -->
        <LinearLayout
            android:id="@+id/datePickerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <EditText
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alfa_slab_one"
                android:hint="startdate:yyyymmdd"
                android:inputType="date"
                android:textSize="29sp" />

            <EditText
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="enddate:yyyymmdd"
                android:inputType="date"
                android:textSize="29sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alfa_slab_one" />
        </LinearLayout>

        <!-- Second view: RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="#f0f0f0"/>
    </ViewSwitcher>

    <Button
        android:id="@+id/fetchLogsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/button_background"
        android:text="@string/fetch_logs_button"
        android:textColor="#ffffff"
        android:textSize="29sp"
        android:fontFamily="@font/alfa_slab_one"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/backToDashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/backToDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back_to_dashboard"
        android:textColor="#2b4a84"
        android:textSize="29sp"
        android:fontFamily="@font/alfa_slab_one"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
